Update Responsive Mobile Changes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
     <section class="main" id="main">
       <div class="content">
+        
         <h2>Hello, I'm<br><span>Abdulkareem Aldeek</span></h2>
         <div class="animated-text">
           <h3>Web Designer</h3>
@@ -48,7 +49,7 @@
       </div>
     </section>
 
-    <section class="about" id="about"  data-aos="fade-left">
+    <section class="about" id="about"  data-aos="fade-up">
       <div class="title reveal">
         <h2 class="section-title">About Me</h2>
       </div>
@@ -59,7 +60,7 @@
           </div>
         </div>
         <div class="column col-right reveal">
-          <h2 class="content-title">Hey There! <span class="typed"></span></h2>
+          <h2 class="content-title ">Hey There! <br class="type-br">  <span class="typed "></span></h2>
           <p class="paragraph-text">I am a passionate and self-motivated student with proven skills, speed in learning, great value to providing and teamwork spirit, and self-learning abilities.<br>
 I love to learn new technologies, share my knowledge with others, and am impassioned about developing websites.
 </p>
@@ -245,7 +246,7 @@ If you are interested in a team-player who can make an immediate impact and add 
       </div>
       <div class="content">
         <div class="row">
-          <div class="card reveal">
+          <div class="col-lg-4 col-md-6 col-sm-12 card reveal">
             <div class="contact-icon">
               <i class="fas fa-map-marker-alt"></i>
             </div>
@@ -254,7 +255,7 @@ If you are interested in a team-player who can make an immediate impact and add 
               <span>Irbid, Jordan</span>
             </div>
           </div>
-          <div class="card reveal">
+          <div class="col-lg-4 col-md-6 col-sm-12 card reveal">
             <div class="contact-icon">
               <i class="fas fa-phone"></i>
             </div>
@@ -263,7 +264,7 @@ If you are interested in a team-player who can make an immediate impact and add 
               <span>+962 790 286 345</span>
             </div>
           </div>
-          <div class="card reveal">
+          <div class="col-lg-4 col-md-6 col-sm-12 card reveal">
             <div class="contact-icon">
               <i class="fas fa-envelope"></i>
             </div>
@@ -272,7 +273,7 @@ If you are interested in a team-player who can make an immediate impact and add 
               <span class="email-info">abdulkareem_aldeek@outlook.com</span>
             </div>
           </div>
-          <div class="card reveal">
+          <div class="col-lg-4 col-md-6 col-sm-12 card reveal">
             <div class="contact-icon">
               <i class="fas fa-globe"></i>
             </div>
@@ -283,7 +284,7 @@ If you are interested in a team-player who can make an immediate impact and add 
           </div>
         </div>
         <div class="row">
-          <div class="contact-form reveal">
+          <div class=" contact-form reveal">
             <h3>Send Message</h3>
             <div class="input-box">
               <input type="text" name="" value="" placeholder="Name">
@@ -315,7 +316,7 @@ If you are interested in a team-player who can make an immediate impact and add 
  ></script>
      <script>
     var typed = new Typed(".typed", {
-      strings: [" ", "I'm Abdulkareem Aldeek" , "Web Designer" , "Web Developer"],
+      strings: [ " ","I'm Abdulkareem Aldeek" , "Web Designer" , "Web Developer"],
       typeSpeed: 100,
       backSpeed: 70,
       loop: true
