--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abdulkareem Portfolio</title>
+ <meta content="I am a passionate and self-motivated student with proven skills, speed in learning, great value to providing and teamwork spirit, and self-learning abilities." name="description">
+  <meta content="Abdulkareem Aldeek, Aldeek, DEEK" name="keywords">
+    <title>Abdulkareem Aldeek</title>
 	    <!-- favicon -->
    <link rel="icon" href="/images/favicon.ico"/>
     <!-- bootstrap -->
