Update Profile links

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </div>
         <a href="#" class="btn1">Hire me</a>
         <div class="media-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.facebook.com/Abood.Aldeek.CS/" target="_blank"k ><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/d.eek9/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/deek_cs" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
     </section>
