--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <link rel="stylesheet" href="style.css">
+    <!-- FontAwesome links -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   </head>
   <body>
@@ -23,7 +24,7 @@
     </div>
 
     <header>
-      <a href="#" class="brand">Deek</a>
+      <a href="index.html" class="brand">Deek</a>
       <div class="menu-btn"></div>
       <div class="navigation">
         <a href="#main">Home</a>
@@ -44,7 +45,7 @@
           <h3>Web Developer</h3>
           <h3>Freelancer</h3>
         </div>
-        <a href="#" class="btn1">Hire me</a>
+        <a href="#about" class="btn1">Hire me</a>
         <div class="media-icons">
           <a href="https://www.facebook.com/Abood.Aldeek.CS/" target="_blank"k ><i class="fab fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/d.eek9/" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -59,8 +60,10 @@
       </div>
       <div class="content">
         <div class="column col-left reveal">
+
           <div class="img-card">
-            <img src="images/22.jpg" alt="">
+            <img class="img1" src="images/22.jpg" alt="">
+            <img class="img2" src="images/img2.jpg">
           </div>
         </div>
         <div class="column col-right reveal">
@@ -171,77 +174,64 @@ If you are interested in a team-player who can make an immediate impact and add 
                  
 
 
-                </ul>
+                  </ul>
+                </div>
               </div>
+              <div class="container box-mix">
+          <div class="row">
+            <div class="col-lg-3 col-md-6 col-12   mix all web" data-aos="fade-up">
+              <div class="card-imG webDev">
+                <img src="images/work2.jpg" alt="">
+              </div>
+
             </div>
-            <div class="container box-mix">
-         <div class="row">
-           <div class="col-lg-3 col-md-6 col-12   mix all web" data-aos="fade-up">
-             <div class="card-imG webDev">
-               <img src="images/work2.jpg" alt="">
-             </div>
+              <div class="col-lg-3 col-md-6 col-12   mix all webDev" data-aos="fade-up">
+              <div class="card-imG">
+                <img src="images/work3.jpg" alt="">
+              </div>
 
-           </div>
-             <div class="col-lg-3 col-md-6 col-12   mix all webDev" data-aos="fade-up">
-             <div class="card-imG">
-               <img src="images/work3.jpg" alt="">
-             </div>
+            </div>
+              <div class="col-lg-3 col-md-6 col-12   mix all web" data-aos="fade-up">
+              <div class="card-imG">
+                <img src="images/work4.jpg" alt="">
+              </div>
 
-           </div>
-             <div class="col-lg-3 col-md-6 col-12   mix all web" data-aos="fade-up">
-             <div class="card-imG">
-               <img src="images/work4.jpg" alt="">
-             </div>
+            </div>
+              <div class="col-lg-3 col-md-6 col-12   mix all webDev" data-aos="fade-up">
+              <div class="card-imG">
+                <img src="images/work6.jpg" alt="">
+              </div>
 
-           </div>
-             <div class="col-lg-3 col-md-6 col-12   mix all webDev" data-aos="fade-up">
-             <div class="card-imG">
-               <img src="images/work6.jpg" alt="">
-             </div>
+            </div>
+              <div class="col-lg-3 col-md-6 col-12   mix all web webDev"  data-aos="fade-right">
+              <div class="card-imG">
+                <img src="images/work1.jpg" alt="">
+              </div>
 
-           </div>
-            <div class="col-lg-3 col-md-6 col-12   mix all web webDev"  data-aos="fade-right">
-             <div class="card-imG">
-               <img src="images/work1.jpg" alt="">
-             </div>
+            </div>
+              <div class="col-lg-3 col-md-6 col-12   mix all webDev web"  data-aos="fade-right">
+              <div class="card-imG">
+                <img src="./assets/img/portfolio/portfolio-1.jpg" alt="">
+              </div>
 
-           </div>
-            <div class="col-lg-3 col-md-6 col-12   mix all webDev web"  data-aos="fade-right">
-             <div class="card-imG">
-               <img src="./assets/img/portfolio/portfolio-1.jpg" alt="">
-             </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12   mix all web"  data-aos="fade-right">
+              <div class="card-imG">
+                <img src="./assets/img/portfolio/portfolio-2.jpg" alt="" >
+              </div>
 
-           </div>
-           <div class="col-lg-3 col-md-6 col-12   mix all web"  data-aos="fade-right">
-             <div class="card-imG">
-               <img src="./assets/img/portfolio/portfolio-2.jpg" alt="" >
-             </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-12   mix all webDev"  data-aos="fade-right">
+              <div class="card-imG">
+                <img src="./assets/img/portfolio/portfolio-4.jpg" alt=""  >
+              </div>
 
-           </div>
-           <div class="col-lg-3 col-md-6 col-12   mix all webDev"  data-aos="fade-right">
-             <div class="card-imG">
-               <img src="./assets/img/portfolio/portfolio-4.jpg" alt=""  >
-             </div>
-
-           </div>
-         </div>
+            </div>
           </div>
-       </div>
-       </div>
-    </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div>
+        </div>
+        </div>
+      </section>
 
 
     <section class="contact" id="contact">
