update meta content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta content="I am a passionate and self-motivated student with proven skills, speed in learning, great value to providing and teamwork spirit, and self-learning abilities." name="description">
-  <meta content="Abdulkareem Aldeek, Aldeek, DEEK" name="keywords">
+  <meta content="Abdulkareem Aldeek, Aldeek, DEEK,Abdul-Karim Al-Deek,Abdulkarim,deek,codes,web design,website,developer,Aldeek" name="keywords">
     <title>Abdulkareem Aldeek</title>
 	    <!-- favicon -->
    <link rel="icon" href="/images/favicon.ico"/>
